# Find_my_word

./: Cargo.toml  README.md
src/: main.rs
static/: change.js  home.html  stylesheet.css
templates/: home.html.hbs
templates/layouts/: main.html.hbs
templates/pages/: home.html.hbs
